atualizado com novo modelo
