# api/routers.js
@@ -7,6 +7,7 @@ const atualizarResisuo = require('./controllers/atualizarResiduo');
 const deleteResisuo = require('./controllers/deletarResiduo');
 const descarte = require('./controllers/descarteResiduo');
 const verificarGanhador = require('./controllers/verificaGanhador');
+const quiz = require('./controllers/gravaQuizz');
 
 
 router.post('/cadastrar/coleta_peso', cadastrarResiduo.cadastrarResiduo);
@@ -15,5 +16,6 @@ router.put('/atualizar/coleta_peso', atualizarResisuo.AtualizarResiduo);
 router.delete('/delete/coleta_peso', deleteResisuo.DeletarResiduo);
 router.post('/descarte', descarte.DescarteResiduo);
 router.get('/ganhadores', verificarGanhador.VerificarGanhador);
+router.post('/gravaQuiz', quiz.GravaQuizz);
 
 module.exports = router;
